[tool.poetry]
name = "mdapi"
version = "3.0.0"
description = "A simple API for serving the metadata from the RPM repositories"
authors = ["Pierre-Yves Chibon <pingou@pingoured.fr>", "Akashdeep Dhar <akashdeep.dhar@gmail.com>"]
license = "GPL-3.0-or-later"
maintainers = ["Pierre-Yves Chibon <pingou@pingoured.fr>", "Akashdeep Dhar <akashdeep.dhar@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/t0xic0der/mdapi"
repository = "https://github.com/t0xic0der/mdapi"
documentation = "https://github.com/t0xic0der/mdapi/blob/master/README.md"
keywords = ["rpm", "centos", "fedora", "metadata", "repositories"]
classifiers = [
	"Development Status :: 4 - Beta",
	"Environment :: Web Environment",
	"Framework :: AsyncIO",
	"Framework :: aiohttp",
	"Intended Audience :: System Administrators",
	"License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
	"Natural Language :: English",
	"Programming Language :: Python :: 3",
	"Programming Language :: Python :: 3.10",
	"Operating System :: POSIX :: Linux",
	"Topic :: Database",
	"Topic :: Internet :: WWW/HTTP :: WSGI :: Application",
	"Topic :: System :: Operating System",
	"Topic :: Software Development",
	"Topic :: System :: Archiving :: Packaging",
]

[tool.poetry.dependencies]
python = "^3.10"
aiohttp = "^3.8.1"
aiosqlite = "^0.17.0"
fedora-messaging = "^3.0.2"
requests = "^2.28.1"
uvloop = "^0.16.0"
gunicorn = "^20.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
