[tool.poetry]
name = "mdapi"
version = "3.0.0"
description = "A simple API for serving the metadata from the RPM repositories"
authors = ["Pierre-Yves Chibon <pingou@pingoured.fr>", "Akashdeep Dhar <akashdeep.dhar@gmail.com>"]
license = "GPL-3.0-or-later"
maintainers = ["Pierre-Yves Chibon <pingou@pingoured.fr>", "Akashdeep Dhar <akashdeep.dhar@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/fedora-infra/mdapi"
repository = "https://github.com/fedora-infra/mdapi"
documentation = "https://github.com/fedora-infra/mdapi/blob/develop/README.md"
keywords = ["rpm", "centos", "fedora", "metadata", "repositories"]
classifiers = [
	"Development Status :: 4 - Beta",
	"Environment :: Web Environment",
	"Framework :: AsyncIO",
	"Framework :: aiohttp",
	"Intended Audience :: System Administrators",
	"License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
	"Natural Language :: English",
	"Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
	"Operating System :: POSIX :: Linux",
	"Topic :: Database",
	"Topic :: Internet :: WWW/HTTP :: WSGI :: Application",
	"Topic :: System :: Operating System",
	"Topic :: Software Development",
	"Topic :: System :: Archiving :: Packaging",
]

[tool.poetry.dependencies]
python = "^3.8"
aiohttp = "^3.8.1"
aiosqlite = "^0.18.0 || ^0.19.0"
fedora-messaging = "^3.0.2"
requests = "^2.28.1"
uvloop = "^0.17.0"
gunicorn = "^20.1.0"
mdapi-messages = "^1.0.0"
click = "^8.1.3"
pyzstd = "^0.15.0"
setuptools = "*"

[tool.poetry.dev-dependencies]
black = "^23.0.0"
isort = "^5.10.1"
pytest = "^7.1.3"
flake8 = "<6.0.1"
pytest-black = "^0.3.12"
pytest-flake8 = "^1.0.7"
pytest-isort = "^3.0.0"
beautifulsoup4 = "^4.11.1"
tox = "^4.0.0"
pytest-aiohttp = "^1.0.4"
pytest-cov = "^4.0.0"
bandit = "^1.7.4"

[tool.pytest.ini_options]
addopts = "--black --isort --flake8 --cov=mdapi --cov-report=term --cov-report=xml --cov-report=html"
flake8-max-line-length = 100
asyncio_mode = "auto"

[tool.isort]
line_length = 100
profile = "black"

[tool.black]
line-length = 100

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
mdapi = "mdapi.main:main"
